// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with signature confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
    data-testid="confirm-header"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
        >
          <div
            class="flex [&>div]:!rounded-none"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
            >
              <svg
                height="32"
                width="32"
                x="0"
                y="0"
              >
                <rect
                  fill="#18CDF2"
                  height="32"
                  transform="translate(-1.04839350379394 -3.30428406946050) rotate(328.9 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#035E56"
                  height="32"
                  transform="translate(-18.29846170883204 10.59246187174860) rotate(176.2 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#F26602"
                  height="32"
                  transform="translate(16.66784201822392 -14.20513972299708) rotate(468.9 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-goerli mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
        >
          G
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-0 mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          data-testid="header-account-name"
        >
          Test Account
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          data-testid="header-network-display-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info__account-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with token transfer confirmation initiated in a dApp 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-3 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-background-default"
    style="z-index: 2; position: relative;"
  >
    <h3
      class="mm-box mm-text mm-text--heading-md mm-box--color-inherit"
    >
      Transfer request
    </h3>
    <div
      class="mm-box mm-box--padding-right-3"
      style="margin-left: auto; position: absolute; right: 0px;"
    >
      <div
        class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-4"
            class=""
            data-original-title="Show advanced details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Advanced tx details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-advanced-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/customize.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with token transfer confirmation initiated in the wallet 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-3 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--background-color-background-default"
    style="z-index: 2;"
  >
    <button
      aria-label="Back"
      class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="wallet-initiated-header-back-button"
    >
      <span
        class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/arrow-left.svg');"
      />
    </button>
    <h3
      class="mm-box mm-text mm-text--heading-md mm-box--color-inherit"
    >
      Review
    </h3>
    <div
      class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
    >
      <div>
        <div
          aria-describedby="tippy-tooltip-5"
          class=""
          data-original-title="Show advanced details"
          data-tooltipped=""
          style="display: inline;"
          tabindex="0"
        >
          <button
            aria-label="Advanced tx details"
            class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="header-advanced-details-button"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/customize.svg');"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with transaction confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
    data-testid="confirm-header"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
        >
          <div
            class="flex [&>div]:!rounded-none"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(24, 100, 242);"
            >
              <svg
                height="32"
                width="32"
                x="0"
                y="0"
              >
                <rect
                  fill="#C81420"
                  height="32"
                  transform="translate(-5.50523690490468 -5.26512336373754) rotate(385.9 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#E9F500"
                  height="32"
                  transform="translate(10.67446940672640 12.42992815919339) rotate(184.5 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#FAB300"
                  height="32"
                  transform="translate(1.81545519923623 -26.03028190637629) rotate(431.3 16.00000000000000 16.00000000000000)"
                  width="32"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-goerli mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
        >
          G
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-0 mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          data-testid="header-account-name"
        />
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          data-testid="header-network-display-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-2"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info__account-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
        <div
          class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
        >
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Show advanced details"
              data-tooltipped=""
              style="display: inline;"
              tabindex="0"
            >
              <button
                aria-label="Advanced tx details"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="header-advanced-details-button"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/customize.svg');"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
